# bh-encode

./: .gitignore  Cargo.toml  build.rs
src/: main.rs
src/enc-swift/src/: lib.swift
src/encoder/: config.rs  mac.rs  mod.rs
src/encoder/core/: mod.rs
src/encoder/output/: mod.rs
src/videoexporter-swift/: Package.swift
src/videoexporter-swift/src/: lib.swift
