[package]
name = "bh-encode"
version = "0.1.0"
edition = "2021"

[dependencies]
scap = { git = "https://github.com/helmerapp/scap.git", branch = "main" }
anyhow = "1.0"
itertools = "0.12.0"
rgb2yuv420 = "0.2.3"

[target.'cfg(target_os = "windows")'.dependencies]
ac-ffmpeg = { git = "https://github.com/angelcam/rust-ac-ffmpeg.git", branch = "master" }

[target.'cfg(target_os = "macos")'.dependencies]
ac-ffmpeg = "0.18.1"