[package]
name = "bh-encode"
version = "0.1.0"
edition = "2021"

[dependencies]
scap = { git = "https://github.com/helmerapp/scap.git", branch = "main" }
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.5"

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.5", features = ["build"] }
